[project]
name = "optiv-lib"
version = "0.1.0"
description = "Automation framework: Azure + PAN OS, with provider sessions and helpers."
readme = "README.md"
requires-python = "~=3.12"
license = "LicenseRef-Proprietary"
license-files = ["licenses/**"]
authors = [{ name = "Your Org" }]
dependencies = [
    "requests~=2.32.5",
    "xmltodict~=1.0.2",
    "azure-core~=1.35.1",
    "azure-identity~=1.25.0",
    "azure-mgmt-resource~=24.0.0",
    "azure-mgmt-network~=29.0.0",
    "azure-mgmt-compute~=37.0.0",
    "truststore~=0.10.4"
]

[build-system]
requires = ["setuptools~=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"optiv_lib" = ["py.typed"]
